2.0P1 - new features and bug fixes.